fix: replace List.getFirst()/getLast() with JDK17-safe equivalents
List.getFirst()/getLast() are JDK21+ SequencedCollection methods introduced by
cherry-picked commits (bloom filter, sparse-vector top-K, and vector index
tests). Replace with get(0) / get(size()-1) for JDK17 compatibility.