@@ -229,7 +229,7 @@ class LSMVectorIndexTombstoneMemoryTest extends TestHelper {
       assertThat(rs.hasNext()).isTrue();
       final List<Map<String, Object>> neighbors = rs.next().getProperty("neighbors");
       assertThat(neighbors).isNotEmpty();
-      assertThat(neighbors.getFirst().get("id")).isEqualTo("doc" + liveVertex);
+      assertThat(neighbors.get(0).get("id")).isEqualTo("doc" + liveVertex);
     });
   }
 }
